---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
fn Counter() {
  let state = {v: 0}

  let inc = fn() {
    state.v += 1
  }

  let dec = fn() {
    state.v -= 1
  }

  state.inc = inc
  state.dec = dec

  return state
}


let c = Counter()
let v0 = c.v
c.inc()
let v1 = c.v
c.dec()
let v2 = c.v

if (
  v0 == 0 and
  v1 == 1 and
  v2 == 0
) {
  "ok"
} else {
  "err"
}

OK
"ok"
